Change project section layout in main - Aligned the projects and dashboard updates sections properly. - Removed the 16px grid gap in main to maintain consistent spacing   between the projects and dashboard updates sections. - Added a new <div> element, "project-cards-container," inside the   projects section to ensure layout consistency.

--- a/style.css
+++ b/style.css
@@ -193,10 +193,15 @@ a {
     background-color: #E2E8F0;
     display: grid;
     grid-template-columns: 2fr .75fr ;
-    gap: 16px;
 }
 
 .projects {
+    display: grid;
+    grid-template-rows: auto 1fr;
+    gap: 16px;
+}
+
+.project-cards-container {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 16px;
